# git-visual-compare

./: .gitignore  README.md  RELEASE_NOTES.md  build_app.py  gvc-safehouse-extensions.sb  gvc.spec  manifest  package-lock.json  package.json  pyproject.toml  sandbox  sandbox-README.md  sandbox-com-apple-services.txt  tsconfig.json
.claude/: settings.json
.claude/hooks/: sandbox-bash-tool-call.sh
.claude/skills/fix-typechecker-errors/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  ci.yml
doc/: BEADS_INTEGRATION.md  CONTRIBUTING.md  DESIGN.md  README.md  RELEASING.md  SCOPE.md  how_it_works.md  module_map.txt
doc/BEADS_INTEGRATION/: .envrc  .settings.local.json
doc/incomplete_features/: standalone_app.md
doc/incomplete_features/standalone_app/packaging/: gvc.spec
packaging/: entitlements.plist
plan/: inception.md  requirements.md
sandbox-legacy/: sandbox
src/gvc/: __init__.py  __main__.py  _gui.py  _ipc.py  app_api.py  cli.py  diff_parser.py  gui.py  ipc.py  paths.py  prefs.py  renderer.py  stub_app.py  testmode.py  window_manager.py
src/gvc/assets/: diff-reorder.js  diff.css  diff.html  diff.js  globals.d.ts
tests/: conftest.py  test_about_panel.py  test_cli.py  test_code_quality.py  test_diff_text_features.py  test_diff_window.py  test_outline_reorder.py  test_readme.py
tests/harness/: app.py  client.py  diff_fixture.py  sandbox.py
tests/harness/playwrightkit/: README.md  __init__.py  _expect.py  _jsbridge.py  _locator.py  _page.py  _runtime.js
