[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gvc"
version = "1.0.0"
description = "Git Visual Compare — a GUI diff viewer driven from the command line"
requires-python = ">=3.14"
dependencies = [
    "pywebview>=5.0",
    "platformdirs>=4.0",
    # AppKit, Foundation
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
]

[project.scripts]
gvc = "gvc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gvc"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
ignore_missing_imports = true
files = ["src/gvc"]
