[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "gvc"
version = "1.0.0"
description = "Git Visual Compare — a GUI diff viewer driven from the command line"
requires-python = ">=3.14"
dependencies = [
    "pywebview>=5.0",
    "platformdirs>=4.0",
    # AppKit, Foundation
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]

[project.scripts]
gvc = "gvc.cli:main"

[tool.poetry]
packages = [{include = "gvc", from = "src"}]

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
ignore_missing_imports = true
files = ["src/gvc"]
