[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "gvc"
version = "1.0.0"
description = "Git Visual Compare — a GUI diff viewer driven from the command line"
requires-python = ">=3.14"
dependencies = [
    "pywebview>=5.0",
    "platformdirs>=4.0",
    # AppKit, Foundation
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]

[project.urls]
"Release notes" = "https://github.com/davidfstr/git-visual-compare/blob/main/RELEASE_NOTES.md"
repository = "https://github.com/davidfstr/git-visual-compare"

[project.scripts]
gvc = "gvc.cli:main"

[tool.poetry]
packages = [{include = "gvc", from = "src"}]

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0"
isort = "^8.0.1"
pyinstaller = {version = ">=6.0", python = ">=3.14,<3.15"}

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
ignore_missing_imports = true
files = ["src/gvc"]

[tool.isort]
src_paths = ["src/gvc"]
skip = ["lib"]
line_length = 79
multi_line_output = 5  # vert-grid-grouped; https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
use_parentheses = true  # never use backslash to continue lines
include_trailing_comma = true
force_alphabetical_sort = true  # don't use separate sections for stdlib vs. 3rd party vs. 1st party imports
force_sort_within_sections = true  # combine from-imports with regular imports
order_by_type = false  # don't sort constants specially
lines_after_imports = 2
